--- a/SchoolDiarySystem/Views/Class/Delete.cshtml
+++ b/SchoolDiarySystem/Views/Class/Delete.cshtml
@@ -23,9 +23,6 @@
                     </div>
                 </div>
                 <div class="single-info-details">
-                    <div class="item-img">
-                        <img src="~/Content/img/figure/teacher.jpg" alt="teacher">
-                    </div>
                     <div class="item-content">
                         <div class="header-inline item-header">
                             @Html.Label(Model.ClassNo.ToString(), new { @class = "text-dark-medium font-medium" });
@@ -63,6 +60,25 @@
 
 
 @section Scripts {
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/x-icon" href="~/Content/img/favicon.png">
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" href="~/Content/css/normalize.css">
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="~/Content/css/main.css">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="~/Content/css/bootstrap.min.css">
+    <!-- Fontawesome CSS -->
+    <link rel="stylesheet" href="~/Content/css/all.min.css">
+    <!-- Flaticon CSS -->
+    <link rel="stylesheet" href="~/Content/fonts/flaticon.css">
+    <!-- Animate CSS -->
+    <link rel="stylesheet" href="~/Content/css/animate.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="~/Content/style.css">
+    <!-- Modernize js -->
+    <script src="~/Content/js/modernizr-3.6.0.min.js"></script>
+
     <!-- jquery-->
     <script src="~/Content/js/jquery-3.3.1.min.js"></script>
     <!-- Plugins js -->
