--- a/SchoolDiarySystem/Views/Comment/Details.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Details.cshtml
@@ -57,15 +57,7 @@
                                             @using (Html.BeginForm("Update", "Comment", new { id = Model.CommentID }, FormMethod.Post))
                                             {
                                                 <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Update" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
-                                                </div>
-                                            }
-                                        </td>
-                                        <td>
-                                            @using (Html.BeginForm("Review", "Comment", new { id = Model.CommentID }, FormMethod.Post))
-                                            {
-                                                <div class="col-12 form-group mg-t-8">
-                                                    <input type="submit" value="Update" class="btn-fill-lg btn-gradient-yellow btn-hover-bluedark" />
+                                                    <input type="submit" value="Update" class="btn-fill-md text-light bg-dark-pastel-green" />
                                                 </div>
                                             }
                                         </td>
