--- a/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
+++ b/SchoolDiarySystem/Views/Shared/_LayoutAdmin.cshtml
@@ -153,7 +153,7 @@
                 @RenderBody()
             </div>
         </div>
-        </div>
+    </div>
 
     <!-- jquery-->
     <script src="~/Content/js/jquery-3.3.1.min.js"></script>
@@ -173,6 +173,10 @@
     <script src="~/Content/js/jquery.scrollUp.min.js"></script>
     <!-- Full Calender Js -->
     <script src="~/Content/js/fullcalendar.min.js"></script>
+    <!-- Select 2 Js -->
+    <script src="js/select2.min.js"></script>
+    <!-- Date Picker Js -->
+    <script src="js/datepicker.min.js"></script>
     <!-- Chart Js -->
     <script src="~/Content/js/Chart.min.js"></script>
     <!-- Custom Js -->
