50% functionality of Controllers. Added student's, parent's and teacher's count.

--- a/SchoolDiarySystem/Views/User/Update.cshtml
+++ b/SchoolDiarySystem/Views/User/Update.cshtml
@@ -32,7 +32,7 @@
                 {
                     <form class="new-added-form">
                         <div class="row">
-                            @if (Model.RoleID == 1)
+                            @if (Model.RoleID == 1 || Model.RoleID == 3)
                             {
                                 <div class="col-xl-4 col-lg-6 col-12 form-group">
                                     <label>First Name *</label>
