--- a/SchoolDiarySystem/Views/Review/Update.cshtml
+++ b/SchoolDiarySystem/Views/Review/Update.cshtml
@@ -34,7 +34,7 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             <div class="col-xl-3 col-lg-6 col-12 form-group">
                                 <label>Review *</label>
-                                @Html.TextBoxFor(m => m.Review, new { @class = "textarea form-control", placeholder = "Last name...", id = "lastname" })
+                                @Html.TextBoxFor(m => m.Review, new { @class = "textarea form-control", placeholder = "Last name...", id = "review" })
                                 @Html.ValidationMessageFor(m => m.Review, "", new { @class = "text-danger" })
                             </div>
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
