Minor changes in Index Views

--- a/SchoolDiarySystem/Views/Review/Index.cshtml
+++ b/SchoolDiarySystem/Views/Review/Index.cshtml
@@ -24,7 +24,7 @@
                                 <h3>Review Board</h3>
                             </div>
                         </div>
-                        @using (Html.BeginForm("Index", "Class", FormMethod.Get))
+                        @using (Html.BeginForm("Index", "Review", FormMethod.Get))
                         {
                             <form class="mg-b-20">
                                 <div class="row gutters-8">
