--- a/SchoolDiarySystem/Views/Room/Index.cshtml
+++ b/SchoolDiarySystem/Views/Room/Index.cshtml
@@ -43,19 +43,19 @@
                             <h3>Room Lists</h3>
                         </div>
                     </div>
-                    <form class="mg-b-20">
-                        <div class="row gutters-8">
-                            <div class="col-lg-12 form-group">
-                                <input type="text" placeholder="Search by Room ..." class="form-control">
+                    @using (Html.BeginForm("Index", "Room", FormMethod.Get))
+                    {
+                        <form class="mg-b-20">
+                            <div class="row gutters-8">
+                                <div class="col-lg-12 form-group">
+                                    <input type="text" placeholder="Search by Room Type ..." name="searchString" class="form-control">
+                                </div>
+                                <div class="col-lg-2 col-12 form-group">
+                                    <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
+                                </div>
                             </div>
-                            <div class="col-lg-2 col-12 form-group">
-                                <button type="submit"
-                                        class="fw-btn-fill btn-gradient-yellow">
-                                    SEARCH
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+                        </form>
+                    }
                     <div class="table-responsive">
                         <table class="table display data-table text-nowrap">
                             <thead>
