--- a/SchoolDiarySystem/Views/Student/Index.cshtml
+++ b/SchoolDiarySystem/Views/Student/Index.cshtml
@@ -42,16 +42,19 @@
                         <h3>All Students Data</h3>
                     </div>
                 </div>
-                <form class="mg-b-20">
-                    <div class="row gutters-8">
-                        <div class="col-4-xxxl col-xl-4 col-lg-3 col-12 form-group">
-                            <input type="text" placeholder="Search by Name ..." class="form-control">
+                @using (Html.BeginForm("Index", "Student", FormMethod.Get))
+                {
+                    <form class="mg-b-20">
+                        <div class="row gutters-8">
+                            <div class="col-4-xxxl col-xl-4 col-lg-3 col-12 form-group">
+                                <input type="text" placeholder="Search by Name ..." name="searchString" class="form-control">
+                            </div>
+                            <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
+                                <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
+                            </div>
                         </div>
-                        <div class="col-1-xxxl col-xl-2 col-lg-3 col-12 form-group">
-                            <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
-                        </div>
-                    </div>
-                </form>
+                    </form>
+                }
                 <div class="table-responsive">
                     <table class="table display data-table text-nowrap">
                         <thead>
@@ -67,80 +70,80 @@
                             </tr>
                         </thead>
                         @*<tfoot>
-                                <tr>
-                                    <th>@Html.DisplayNameFor(m => m.FirstName)</th>
-                                    <th>@Html.DisplayNameFor(m => m.LastName)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Gender)</th>
-                                    <th>@Html.DisplayNameFor(m => m.City)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Qualification)</th>
-                                    <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
-                                    <th>@Html.DisplayNameFor(m => m.Email)</th>
-                                    <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
-                                    <th></th>
-                                </tr>
-                            </tfoot>*@
+                    <tr>
+                        <th>@Html.DisplayNameFor(m => m.FirstName)</th>
+                        <th>@Html.DisplayNameFor(m => m.LastName)</th>
+                        <th>@Html.DisplayNameFor(m => m.Gender)</th>
+                        <th>@Html.DisplayNameFor(m => m.City)</th>
+                        <th>@Html.DisplayNameFor(m => m.Qualification)</th>
+                        <th>@Html.DisplayNameFor(m => m.DayofBirth)</th>
+                        <th>@Html.DisplayNameFor(m => m.Email)</th>
+                        <th>@Html.DisplayNameFor(m => m.PhoneNo)</th>
+                        <th></th>
+                    </tr>
+                </tfoot>*@
                         <tbody>
                             @foreach (var item in Model)
                             {
-                            <tr>
-                                <td class="text-center">
-                                    <div class="form-check">
-                                        <input type="checkbox" class="form-check-input">
-                                        @if (item.Gender == "Male")
-                                        {
-                                            <img src="~/Content/img/figure/student2.png" alt="student">
-                                        }
-                                        else
-                                        {
-                                            <img src="~/Content/img/figure/student3.png" alt="student">
-                                        }
-                                    </div>
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(m => item.FirstName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(m => item.LastName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(m => item.Gender)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(m => item.Class.ClassNo)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(m => item.Parent.FullName)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(m => item.DayofBirth)
-                                </td>
-
-                                <td>
-                                    <div class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown"
-                                           aria-expanded="false">
-                                            <span class="flaticon-more-button-of-three-dots"></span>
-                                        </a>
-                                        <div class="dropdown-menu dropdown-menu-right">
-                                            <a class="dropdown-item" href="#">
-                                                <i class="fas fa-cogs text-dark-pastel-green"></i>Update
-                                            </a>
-                                            <a class="dropdown-item" href="#">
-                                                <i class="fas fa-times text-orange-red"></i>Delete
-                                            </a>
-                                            <a class="dropdown-item" href="#">
-                                                <i class="fas fa-redo-alt text-orange-peel"></i>Details
-                                            </a>
+                                <tr>
+                                    <td class="text-center">
+                                        <div class="form-check">
+                                            <input type="checkbox" class="form-check-input">
+                                            @if (item.Gender == "Male")
+                                            {
+                                                <img src="~/Content/img/figure/student2.png" alt="student">
+                                            }
+                                            else
+                                            {
+                                                <img src="~/Content/img/figure/student3.png" alt="student">
+                                            }
                                         </div>
-                                    </div>
-                                </td>
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.FirstName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.LastName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.Gender)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.Class.ClassNo)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.Parent.FullName)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(m => item.DayofBirth)
+                                    </td>
 
-                                @*<td>
-            @Html.ActionLink("Update", "Update", new { id = item.StudentID })@Url.Action("Update", new { id = item.StudentID })
-            @Html.ActionLink("Details", "Details", new { id = item.StudentID })@Url.Action("Delete", new { id = item.StudentID })
-            @Html.ActionLink("Delete", "Delete", new { id = item.StudentID })@Url.Action("Details", new { id = item.StudentID })
-        </td>*@
-                            </tr>
+                                    <td>
+                                        <div class="dropdown">
+                                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+                                               aria-expanded="false">
+                                                <span class="flaticon-more-button-of-three-dots"></span>
+                                            </a>
+                                            <div class="dropdown-menu dropdown-menu-right">
+                                                <a class="dropdown-item" href="#">
+                                                    <i class="fas fa-cogs text-dark-pastel-green"></i>Update
+                                                </a>
+                                                <a class="dropdown-item" href="#">
+                                                    <i class="fas fa-times text-orange-red"></i>Delete
+                                                </a>
+                                                <a class="dropdown-item" href="#">
+                                                    <i class="fas fa-redo-alt text-orange-peel"></i>Details
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </td>
+
+                                    @*<td>
+                                @Html.ActionLink("Update", "Update", new { id = item.StudentID })@Url.Action("Update", new { id = item.StudentID })
+                                @Html.ActionLink("Details", "Details", new { id = item.StudentID })@Url.Action("Delete", new { id = item.StudentID })
+                                @Html.ActionLink("Delete", "Delete", new { id = item.StudentID })@Url.Action("Details", new { id = item.StudentID })
+                            </td>*@
+                                </tr>
                             }
                         </tbody>
                     </table>
