--- a/SchoolDiarySystem/Views/Topic/Index.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Index.cshtml
@@ -49,7 +49,7 @@
                             <form class="mg-b-20">
                                 <div class="row gutters-8">
                                     <div class="col-lg-5 col-12 form-group">
-                                        <input type="date" placeholder="Search by Date ..." name="searchString" class="form-control air-datepicker">
+                                        <input type="text" autocomplete="off" placeholder="Search by Date ..." name="searchString" class="form-control air-datepicker">
                                     </div>
                                     <div class="col-lg-5 col-12 form-group">
                                         <input type="text" placeholder="Search by Title ..." name="searchString2" class="form-control">
