--- a/SchoolDiarySystem/Views/Comment/Index.cshtml
+++ b/SchoolDiarySystem/Views/Comment/Index.cshtml
@@ -49,7 +49,7 @@
                             <form class="mg-b-20">
                                 <div class="row gutters-8">
                                     <div class="col-lg-5 col-12 form-group">
-                                        <input type="date" placeholder="Search by Date ..." name="searchString" class="form-control air-datepicker">
+                                        <input type="text" autocomplete="off" placeholder="Search by Date ..." name="searchString" class="form-control air-datepicker">
                                     </div>
                                     <div class="col-lg-5 col-12 form-group">
                                         <input type="text" placeholder="Search by Title ..." name="searchString2" class="form-control">
@@ -63,34 +63,34 @@
                         <div class="notice-board-wrap">
                             @foreach (var item in Model)
                             {
-                                <div class="notice-list">
-                                    <div class="post-date bg-skyblue">@Html.DisplayFor(m => item.CommentDate)</div>
-                                    @if (item.Review.ReviewID != 0)
-                                    {
-                                        <a href="#">
-                                            <div class="post-date bg-pink">
-                                                Reviewed
-                                            </div>
-                                        </a>
-                                    }
-                                    <h6 class="notice-title">
-                                        <a href="@Url.Action("Details", "Comment", new { id = item.CommentID })">
-                                            @Html.DisplayFor(m => item.Comment)
-                                        </a>
-                                    </h6>
-                                    @if (item.Review.ReviewID != 0)
-                                    {
-                                        <div class="entry-meta"> @Html.DisplayFor(m => item.Review.Review)</div>
-                                    }
-                                    <br />
-                                    <div class="entry-meta">  @Html.DisplayFor(m => item.Student.FullName) / <span>@Html.DisplayFor(m => item.Subject.SubjectTitle)</span></div>
-                                </div>
+                            <div class="notice-list">
+                                <div class="post-date bg-skyblue">@Html.DisplayFor(m => item.CommentDate)</div>
+                                @if (item.Review.ReviewID != 0)
+                                {
+                                    @*@Url.Action("Details", "Review", new { id = item.CommentID })*@
+                                    <a href="#">
+                                        <div class="post-date bg-pink">
+                                            Reviewed
+                                        </div>
+                                    </a>
+                                }
+                                <h6 class="notice-title">
+                                    <a href="@Url.Action("Details", "Comment", new { id = item.CommentID })">
+                                        @Html.DisplayFor(m => item.Comment)
+                                    </a>
+                                </h6>
+                                @if (item.Review.ReviewID != 0)
+                                {
+                                    <div class="entry-meta"> @Html.DisplayFor(m => item.Review.Review)</div>
+                                }
+                                <br />
+                                <div class="entry-meta">  @Html.DisplayFor(m => item.Student.FullName) / <span>@Html.DisplayFor(m => item.Subject.SubjectTitle)</span></div>
+                            </div>
                             }
                         </div>
                     </div>
                 </div>
             </div>
-            <!-- All Notice Area End Here -->
         </div>
     </div>
 </div>
