--- a/SchoolDiarySystem/Views/Professor/Index.cshtml
+++ b/SchoolDiarySystem/Views/Professor/Index.cshtml
@@ -3,6 +3,8 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_LayoutTeacher.cshtml";
 }
+@using SchoolDiarySystem.Models
+@model IEnumerable<Students>
 
 <div class="dashboard-page-one">
     <div class="dashboard-content-one">
@@ -97,77 +99,73 @@
                             </div>
                         </div>
                         <div class="table-box-wrap">
-                            <form class="search-form-box">
-                                <div class="row gutters-8">
-                                    <div class="col-4-xxxl col-xl-4 col-lg-4 col-12 form-group">
-                                        <input type="text" placeholder="Search by Name ..." class="form-control">
+                            @using (Html.BeginForm("Index", "Professor", FormMethod.Get))
+                            {
+                                <form class="search-form-box">
+                                    <div class="row gutters-8">
+                                        <div class="col-4-xxxl col-xl-10 col-lg-4 col-12 form-group">
+                                            <input type="text" placeholder="Search by Name ..." name="searchString" class="form-control">
+                                        </div>
+                                        <div class="col-1-xxxl col-xl-2 col-lg-2 col-12 form-group">
+                                            <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
+                                        </div>
                                     </div>
-                                    <div class="col-1-xxxl col-xl-2 col-lg-2 col-12 form-group">
-                                        <button type="submit" class="fw-btn-fill btn-gradient-yellow">SEARCH</button>
-                                    </div>
-                                </div>
-                            </form>
+                                </form>
+                            }
                             <div class="table-responsive student-table-box">
                                 <table class="table display data-table text-nowrap">
                                     <thead>
                                         <tr>
-                                            <th>
-                                                <div class="form-check">
-                                                    <input type="checkbox" class="form-check-input checkAll">
-                                                    <label class="form-check-label">Roll</label>
-                                                </div>
-                                            </th>
-                                            <th>Photo</th>
-                                            <th>Name</th>
+                                            <th></th>
+                                            <th>First Name</th>
+                                            <th>Last Name</th>
                                             <th>Gender</th>
                                             <th>Class</th>
-                                            <th>Section</th>
-                                            <th>Parents</th>
-                                            <th>Address</th>
+                                            <th>Parent</th>
                                             <th>Date Of Birth</th>
-                                            <th>Phone</th>
-                                            <th>E-mail</th>
                                             <th></th>
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <td>
-                                                <div class="form-check">
-                                                    <input type="checkbox" class="form-check-input">
-                                                    <label class="form-check-label">#0021</label>
-                                                </div>
-                                            </td>
-                                            <td class="text-center"><img src="img/figure/student2.png" alt="student"></td>
-                                            <td>Mark Willy</td>
-                                            <td>Male</td>
-                                            <td>2</td>
-                                            <td>A</td>
-                                            <td>Jack Sparrow </td>
-                                            <td>TA-107 Newyork</td>
-                                            <td>02/05/2001</td>
-                                            <td>+ 123 9988568</td>
-                                            <td>kazifahim93@gmail.com</td>
-                                            <td>
-                                                <div class="dropdown">
-                                                    <a href="#" class="dropdown-toggle"
-                                                       data-toggle="dropdown" aria-expanded="false">
-                                                        <span class="flaticon-more-button-of-three-dots"></span>
-                                                    </a>
-                                                    <div class="dropdown-menu dropdown-menu-right">
-                                                        <a class="dropdown-item" href="#">
-                                                            <i class="fas fa-times text-orange-red"></i>Close
-                                                        </a>
-                                                        <a class="dropdown-item" href="#">
-                                                            <i class="fas fa-cogs text-dark-pastel-green"></i>Edit
-                                                        </a>
-                                                        <a class="dropdown-item" href="#">
-                                                            <i class="fas fa-redo-alt text-orange-peel"></i>Refresh
-                                                        </a>
+                                        @foreach (var item in Model)
+                                        {
+                                            <tr>
+                                                <td class="text-center">
+                                                    <div class="form-check">
+                                                        <input type="checkbox" class="form-check-input">
+                                                        @if (item.Gender == "Male")
+                                                        {
+                                                            <img src="~/Content/img/figure/student2.png" alt="student">
+                                                        }
+                                                        else
+                                                        {
+                                                            <img src="~/Content/img/figure/student3.png" alt="student">
+                                                        }
                                                     </div>
-                                                </div>
-                                            </td>
-                                        </tr>
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(m => item.FirstName)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(m => item.LastName)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(m => item.Gender)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(m => item.Class.ClassNo)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(m => item.Parent.FullName)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(m => item.DayofBirth)
+                                                </td>
+                                                <td>
+                                                    <a href="@Url.Action("Details", "Student", new { id = item.StudentID })">Details</a>
+                                                </td>
+                                            </tr>
+                                        }
                                     </tbody>
                                 </table>
                             </div>
