--- a/SchoolDiarySystem/Views/Topic/Details.cshtml
+++ b/SchoolDiarySystem/Views/Topic/Details.cshtml
@@ -1,14 +1,14 @@
 ﻿@using SchoolDiarySystem.Models
 @model Topics
 
-<div class="dashboard-page-one">
+<div class="dashboard-page-one" style="height: 100%; position:relative;">
     <div class="dashboard-content-one">
         <!-- Breadcubs Area Start Here -->
         <div class="breadcrumbs-area">
             <h3>Topic</h3>
             <ul>
                 <li>
-                    <a href="index-2.html">Home</a>
+                    <a href="@Url.Action("Index", "Professor")">Home</a>
                 </li>
                 <li>Topic Details</li>
             </ul>
@@ -19,12 +19,13 @@
             <div class="card-body">
                 <div class="heading-layout1">
                     <div class="item-title">
-                        <h3>Topic Details</h3>
+                        <h3>Topic</h3>
                     </div>
                 </div>
                 <div class="single-info-details">
                     <div class="item-content">
                         <div class="header-inline item-header">
+                            <h3 class="text-dark-medium font-medium">Details</h3>
                             <div class="header-elements">
                                 <ul>
                                     <li><a href="#"><i class="fas fa-print"></i></a></li>
@@ -32,7 +33,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <p>@Html.Label(Model.Content.ToString(), new { @class = "font-medium text-dark-medium" })</p>
+                        <p>@Html.Label("Content", Model.Content.ToString())</p>
                         <div class="info-table table-responsive">
                             <table class="table text-nowrap">
                                 <tbody>
@@ -44,10 +45,6 @@
                                         <td>Time:</td>
                                         <td>@Html.Label(Model.Time.ToString(), new { @class = "font-medium text-dark-medium" })</td>
                                     </tr>
-                                    @*<tr>
-                                            <td>Birthday:</td>
-                                            <td>@Html.Label(Model.Content.ToString(), new { @class = "font-medium text-dark-medium" })</td>
-                                        </tr>*@
                                     <tr>
                                         <td>Class:</td>
                                         <td>@Html.Label(Model.Class.ClassNo.ToString(), new { @class = "font-medium text-dark-medium" })</td>
